--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,162 @@
+* {
+  padding: 0;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(145, 81, 81);
+  color: white;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: rgb(150, 109, 109);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(250, 130, 130);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+.App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+h1 {
+  margin: 40px 0;
+}
+h2 {
+  color: rgb(250, 130, 130);
+  font-weight: 900;
+}
+a {
+  color: rgb(250, 130, 130);
+  font-weight: 900;
+  font-size: 20px;
+  margin: 0 10px;
+}
+p {
+  margin: 5px 0;
+}
+
+.dash {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  background-color: rgb(231, 166, 166);
+  box-shadow: 0 0 20px 5px rgb(241, 97, 97);
+  padding: 20px;
+}
+
+.news-feed {
+  background-color: rgb(255, 255, 255);
+  padding: 20px;
+  margin: 10px;
+  box-shadow: 0px 0px 10px 0.5px rgb(241, 97, 97);
+  max-width: 300px;
+  height: 60vh;
+  overflow: scroll;
+  overflow-x: hidden;
+}
+
+.currency-converter {
+  background-color: rgb(255, 255, 255);
+  padding: 10px;
+  margin: 10px;
+  box-shadow: 0px 0px 10px 0.5px rgb(241, 97, 97);
+  text-align: center;
+  width: 100%;
+}
+.input-box {
+  background-color: rgb(255, 83, 83);
+  padding: 20px;
+  margin-top: 10px;
+  box-shadow: 0px 0px 10px 0.5px rgb(0, 0, 0);
+}
+
+.exchange-rate {
+  background-color: rgb(255, 83, 83);
+  padding: 20px;
+  margin-top: 10px;
+  box-shadow: 0px 0px 10px 0.5px rgb(0, 0, 0);
+}
+
+button {
+  border: none;
+  padding: 10px;
+  margin: 10px;
+  font-size: 20px;
+  background-color: rgb(243, 144, 144);
+  width: 300px;
+  color: white;
+}
+button:hover {
+  background-color: rgb(219, 51, 51);
+  cursor: pointer;
+}
+
+input,
+select {
+  border: none;
+  outline: none;
+}
+
+select {
+  background-color: rgb(231, 166, 166);
+  padding: 5px;
+}
+.btn {
+  width: 30px;
+}
+
+@media only screen and (max-width: 450px) {
+  .App {
+    width: 100vw;
+    height: auto;
+  }
+  .dash {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .currency-converter {
+    width: 90%;
+    margin: 20px 0;
+  }
+  .input-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  button {
+    width: 50%;
+  }
+  input {
+    width: 50%;
+  }
 }
